restored cew for part 2

--- a/part_1/.env.example
+++ b/part_1/.env.example
@@ -2,10 +2,9 @@ CRITEO_CLIENT_ID=<your criteo client id>
 CRITEO_CLIENT_SECRET=<your criteo client secret>
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-07/retail-media/
 
-# only if you use Azure
-# AZURE_OPENAI_API_KEY=
-# AZURE_OPENAI_ENDPOINT=
-# AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
-# OPENAI_API_VERSION=2024-02-15-preview
+AZURE_OPENAI_DEPLOYMENT=
+AZURE_API_KEY=
+AZURE_API_BASE=
+AZURE_API_VERSION=2024-02-15-preview
 
-GROQ_API_KEY=<your groq api key>
+GROQ_API_KEY=
