--- a/part_2/.env.example
+++ b/part_2/.env.example
@@ -5,10 +5,9 @@ OPENAI_MODEL_NAME=
 
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-07/retail-media/
 
-# only if you use Azure
-# AZURE_OPENAI_API_KEY=
-# AZURE_OPENAI_ENDPOINT=
-# AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
-# OPENAI_API_VERSION=2024-02-15-preview
+AZURE_OPENAI_DEPLOYMENT=
+AZURE_API_KEY=
+AZURE_API_BASE=
+AZURE_API_VERSION=2024-02-15-preview
 
-GROQ_API_KEY=<your groq api key>
+GROQ_API_KEY=
