--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -3,7 +3,7 @@ fetch_campaigns_task:
     Get the first 100 campaigns for account {account_id} using the Campaigns List Tool.
     Start with page 0 and page size 100.
     Remember the results as [CampaignsList] in the cache.
-    If the budget field is missing, set it to 0.0,
+    If the budget field is null, set it to 0.0,
   expected_output: >
     A list of campaigns remembered as [CampaignList].
 
@@ -20,7 +20,7 @@ campaigns_budget_pie_chart:
 campaigns_report:
   description: >
     Create a report in Markdown format, with the data from the [CampaignList].
-    The report should show a table with the campaign name, start date, budget, and budgetSpent.
+    The report should show a table with the campaign name, start date, status, budget, and budgetSpent.
     The report should include a pie chart of the campaign budgets. Use only the file name of the pie chart, do not include the path.
     The 'title' should be Campaign Budget Report for Account {account_id}.
     do not use "```markdown" or "```" in the markdown file.
