refined part 2 to use different llms

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 **/output/**/*.jpg
 **/output/**/*.jpeg
 **/output/**/*.txt
+**/output/**/*.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
