--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -4,9 +4,10 @@ fetch_campaigns_task:
     Start with page 0 and page size 100.
     If the budget field of a Campaign is null or zero remove the list
     of campaigns from the response.
+    ask the human if the list of campaigns is correct.
     Remember the results as [CampaignsList] in the cache.
   expected_output: >
-    A list of campaigns remembered as [CampaignList].
+    [CampaignList]
 
 campaigns_budget_pie_chart:
   description: >
@@ -28,5 +29,6 @@ campaigns_report:
     Include a total budget and total budget spent at the end of the report.
     Include a summary of the report at the end.
     do not use "```markdown" or "```" in the markdown file.
+    ask the human if the report is correct.
   expected_output: >
     A markdown file with the report.
