--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -1,15 +1,13 @@
 fetch_campaigns_task:
   description: >
-    Get the first 100 campaigns withBudget for account {account_id} using the Campaigns List Tool.
-    Start with page 0 and page size 100.
-    ask the human if the list of campaigns is correct.
-    Remember the results as [CampaignsList] in the cache.
+    Get the first 100 campaigns for account {account_id} using the Campaigns List Tool and with_budget is true.
+    Remember the results as CampaignsList in the cache.
   expected_output: >
-    [CampaignList]
+    CampaignList
 
 campaigns_budget_pie_chart:
   description: >
-    Create a pie chart from the data in the [CampaignList].
+    Create a pie chart from the data in the CampaignList.
     The 'labels' should be the 'name' field for each campaign.
     The 'title' should be 'Campaign Budgets for Account {account_id}'.
     The 'file_name' should be 'campaign_budget_pie_chart.png'.
@@ -27,6 +25,6 @@ campaigns_report:
     Include a total budget and total budget spent at the end of the report.
     Include a summary of the report at the end.
     do not use "```markdown" or "```" in the markdown file.
-    
+
   expected_output: >
     A markdown file with the report.
