working on part 2 predictability

--- a/part_2/src/part_2/config/agents.yaml
+++ b/part_2/src/part_2/config/agents.yaml
@@ -3,13 +3,15 @@ campaign_manager:
   role: >
     Manages campaigns for a specific account
   goal: >
-    A collection of retail media campaigns
+    A list of Campaigns
   backstory: >
-    You are expert in using the Campaigns List Tool efficently.
-    
+    You are expert in managing sampaigns and retrieving information about campaigns.
+    You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
+    You use the Campaigns List Tool efficiently, by making the right number of requests.
+    Remember the results of the campaigns to avoid making unnecessary requests.
+
   verbose: True
   cache: True
-
 
 visualizer_agent:
   role: >
