account models tests crew directories

--- a/part_3/.env.example
+++ b/part_3/.env.example
@@ -1,9 +1,10 @@
 CRITEO_CLIENT_ID=<your criteo client id>
 CRITEO_CLIENT_SECRET=<your criteo client secret>
 OPENAI_API_KEY=
-OPENAI_MODEL_NAME=gpt-4o
 
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-07/retail-media/
+
+SERPER_API_KEY=
 
 # only if you use Azure
 AZURE_OPENAI_API_KEY=
